cleaned the build system + fixed standard build

--- a/armhf/Makefile
+++ b/armhf/Makefile
@@ -10,7 +10,7 @@
 # You need live-build package installed and superuser privileges.
 
 BUILD_NUMBER=1
-BASEIMG=parrotsec-3.4-armhf
+BASEIMG=parrotsec-standard-3.5-armhf
 IMAGEPREFIX=$(BASEIMG)-$(BUILD_NUMBER)
 LOGFILE=$(IMAGEPREFIX).build-log.txt
 CONFIGFILE=$(IMAGEPREFIX).config.tar.bz2
